--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "react-bootstrap": "^2.10.1",
+    "react-hook-form": "^7.51.0",
+    "react-password-checklist": "^1.5.1",
+    "react-router-dom": "^6.22.3"
   }
 }
